feat(back): Update backend and insert new enviroment variable.

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ DB_MAX_SIZE=900GB
 CONF_API_NAME=/admin/api/v0
 
 OPCUA_FILEURL=/code/external_config/opcua_exporter.yml
+PROMETHEUS_FILEURL=/code/external_config/prometheus.yml
 OPCUA_TESTER_ENDPOINT=opc.tcp://localhost:4890
 
 # FBOOT_SSH_IP=localhost
