--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,7 @@ services:
     environment:
       CONF_API_NAME: $CONF_API_NAME
       OPCUA_FILEURL: $OPCUA_FILEURL
+      PROMETHEUS_FILEURL: $PROMETHEUS_FILEURL
       OPCUA_TESTER_ENDPOINT: $OPCUA_TESTER_ENDPOINT
       FBOOT_SSH_IP: $FBOOT_SSH_IP
       FBOOT_SSH_USERNAME: $FBOOT_SSH_USERNAME
