fix(docker-compose): Change kong image type to build from submodule. Add missing fortecycle enviroment variable.

--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ OPCUA_FILEURL=/code/external_config/opcua_exporter.yml
 PROMETHEUS_FILEURL=/code/external_config/prometheus.yml
 OPCUA_TESTER_ENDPOINT=opc.tcp://localhost:4890
 
+FBOOT_CYCLETIME=20000
 # FBOOT_SSH_IP=localhost
 # FBOOT_SSH_USERNAME=user
 FBOOT_FILEURL=./config/gw_opc.fboot
