--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,9 @@ services:
         max-size: $LOG_RETENTION
   
   kong:
-    container_name: kong
-    image: kong:0.1.0
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
     networks:
       - kong-net
     restart: always
@@ -123,6 +124,7 @@ services:
       FBOOT_SSH_IP: $FBOOT_SSH_IP
       FBOOT_SSH_USERNAME: $FBOOT_SSH_USERNAME
       FBOOT_FILEURL: $FBOOT_FILEURL
+      CONF_CYCLETIME: $FBOOT_CYCLETIME
     ports:
       - "8000"
     volumes:
