feat(opcua_exporter): Update exporter and add forced read to env file.

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ LOG_RETENTION=50m
 # Exporter Configurations
 EXPORTER_TIMEOUT=30s
 EXPORTER_MAX_TIMEOUT=2
+EXPORTER_FORCE_READ=60s
 
 # Prometheus Configurations
 DB_RETENTION_TIME=2y
