fix(opcua_exporter): Remove exporter submodule from the application.

--- a/.env
+++ b/.env
@@ -1,12 +1,7 @@
 # Global Configurations
-HOST_IP=localhost
+HOST_IP=127.0.0.1
 USER_ID=1000
 LOG_RETENTION=50m
-
-# Exporter Configurations
-EXPORTER_TIMEOUT=30s
-EXPORTER_MAX_TIMEOUT=2
-EXPORTER_FORCE_READ=60s
 
 # Prometheus Configurations
 DB_RETENTION_TIME=2y
@@ -17,9 +12,6 @@ CONF_API_NAME=/admin/api/v0
 
 OPCUA_FILEURL=/code/external_config/opcua_exporter.yml
 PROMETHEUS_FILEURL=/code/external_config/prometheus.yml
-OPCUA_TESTER_ENDPOINT=opc.tcp://localhost:4890
+FBOOT_FILEURL=/code/external_config/gw_opc.fboot
 
 FBOOT_CYCLETIME=20000
-# FBOOT_SSH_IP=localhost
-# FBOOT_SSH_USERNAME=user
-FBOOT_FILEURL=./config/gw_opc.fboot
