--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -4,9 +4,4 @@ global:
   scrape_interval:     20s
   evaluation_interval: 20s
 
-scrape_configs:
-  - job_name: Exporter
-    static_configs:
-      - targets: ['exporter:9686']
-        labels:
-          group: 'exporter'
+scrape_configs: []
