fix(docker-compose): Insert new grafana image into compose yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     
   grafana:
     container_name: grafana
-    image: grafana/grafana-oss:9.1.7
+    image: tocandira_dashboard:0.1.0
     networks:
       - kong-net
     restart: always
