--- a/config/kong.yml
+++ b/config/kong.yml
@@ -3,8 +3,8 @@
 _format_version: "1.1"
 
 services:
-  - name: grafana
-    url: http://grafana:3000
+  - name: dashboard
+    url: http://dashboard:3000
 
   - name: frontend
     url: http://frontend:8000
@@ -13,8 +13,8 @@ services:
     url: http://backend:8000
 
 routes:
-  - name: grafana
-    service: grafana
+  - name: dashboard
+    service: dashboard
     preserve_host: true
     paths:
     - /
